@@ -119,6 +119,7 @@ setup(name='karl',
       mailout = karl.scripts.mailout:main
       reset_security_workflows = karl.scripts.reset_security_workflows:main
       use_pgtextindex = karl.scripts.use_pgtextindex:main
+      site_announce = karl.scripts.site_announce:main
       """
       )
 
